# backend/docs/swagger.json
@@ -740,6 +740,9 @@
                 "department": {
                     "type": "string"
                 },
+                "final_score": {
+                    "type": "integer"
+                },
                 "name": {
                     "type": "string"
                 },
@@ -763,12 +766,19 @@
                 },
                 "term": {
                     "type": "string"
+                },
+                "usual_score": {
+                    "type": "integer"
                 }
             }
         },
         "model.Selection": {
             "type": "object",
             "properties": {
+                "examScore": {
+                    "description": "考试成绩, -1表示未评分",
+                    "type": "integer"
+                },
                 "id": {
                     "type": "integer"
                 },
@@ -780,7 +790,7 @@
                     "type": "integer"
                 },
                 "score": {
-                    "description": "分数, -1表示未评分",
+                    "description": "总分, -1表示未评分",
                     "type": "integer"
                 },
                 "student": {
@@ -788,6 +798,10 @@
                     "$ref": "#/definitions/model.Student"
                 },
                 "studentID": {
+                    "type": "integer"
+                },
+                "usualScore": {
+                    "description": "平时成绩, -1表示未评分",
                     "type": "integer"
                 }
             }
